style.css
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles
   ========================================================================== */

html {
    color: #000000;
    font-size: 1em;
    line-height: 1.6;
    font-family: "inconsolata", serif;
    font-weight: 500;
    height: 100%;
}

body {
    min-height: 100%;
}

/*
 * Remove text-shadow in selection highlight:
 */

::selection {
    background: white;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Global
   ========================================================================== */
.page {
    background-color: white;
    margin: 1em 2.5em 5%;
    max-width: 1200px;
    margin: auto;
    margin-top: 2em;
    height: 100%;
}

.logo {
    width: 90px;
    display: flex;
    margin-left: 40px;
    margin-top: 80px;
}

::selection {
    background: #DCF42B;
 }

.header {
    background-color: black;
    height: 6em;
    padding: .5em;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.title {
    font-family: Oswald;
    font-size: 1.7em;
    font-weight: 500;
    text-transform: uppercase;
    color: #DCF42B;
    padding-left: 20px;
}

a.title {
    text-decoration: none;
}

a.title:hover {
   color: white; 
   text-decoration: underline;
   transition: all 0.3s ease-in;
}

.subtitle {
    font-size: 14.5px;
    font-family: "Inconsolata", serif;
    font-weight:300;
    padding-left: 20px;
    line-height: 1em;
    color: white;
    display: flex-wrap;
    transition: all 0.2s ease-in;
}

.subtitle-link {
    color: white;
}
.subtitle-link:hover {
    color: #DCF42B;
    transition: all 0.2s ease-in;;
}

ul {
    font-size: 1.2em;
}

a[href]:not([class]), 
.back {
    margin-top: 2.5em;
    color: black;
    font-family: 'inconsolata', sans-serif;
}

.back {
    font-size: .8em;
}

a[href]:not([class]):hover,
.back:hover {
    color: #EE2BB4;
}



/* Emily maybe adds CSS looping animation here */

.beating-hearts-baby {}

/* https://developer.mozilla.org/en-US/docs/Web/CSS/@keyframes */

@keyframes beatingHeartsBaby {}

/* end Emily's CSS animation */

.pair-of-moments {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: flex-start;
    margin: 10%;
    height: 100%;
}

.moment-container, .suggester-container {
    margin: 0 auto;
    transition: all 0.3s ease-in;
    opacity: 1;
}
.moment-container {
    max-width: 550px;
    opacity: 1;
}

.beating-hearts-baby .moment-container, 
.beating-hearts-baby .suggester-container {
    opacity: 0;
}

.loader {
    opacity: 0;
    height: 0;
}

.beating-hearts-baby .loader {
    opacity: 1;
    display: block;
    width: 100%;
    height: 80vh;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-flow: column;
}

.loader svg {
    max-width: 50%;
    display: inline-block;
}

.intro-container {
    margin: 5% 10% 10% 10%;
    max-width: 800px;
}

.suggester-container {
    display: flex;
    justify-content: center;
}

/* ICON STYLES */

.icon {
    width: 2em;
    height: auto;
    margin-left: -10px;
    margin-bottom: 3px;
}

/* PAGE HEADINGS */

.suggestion {
    font-size: 1.4em;
    font-weight: 400;
    line-height: 1.2; 
    font-family: "Inconsolata", serif;
}
.intro {
    font-size: 2em;
    font-weight: 400;
    line-height: 1.1; 
    font-family: "Oswald", serif;
}
.suggester {
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 900;
    font-size: 14px;
    padding: 10px;
}


/* CONTENT */

.footnote {
    padding-top: .5em;
    font-size: 14px;
    padding-bottom: 3em;
}

.comment {
    font-size: 1.2em;
}
.description {
    font-size: 1.3em;
}
.category, 
.next-suggestion,
.get-started {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 1.3em;
}

.name {
    font-weight: 900;
}

.category {
    border-bottom: .5px solid;
    padding: 4px;
}

.suggester-container {
    margin-top: 1.5em;
    margin-bottom: 7em;
    font-weight: 400;
    text-align: center;
    bottom: 0;
}


.name {
    margin-left: .75em;
    font-size: .9em;
}

.next-suggestion:before {
    content: '';
    pointer-events: none;
    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    top: -8vw;
    height: 8vw;
    background-image: linear-gradient(to bottom,rgba(255,255,255,0),white 70%);
}

.next-suggestion, 
.get-started {
    display: block;
    line-height: .6em;
    font-size: 26px;
    font-weight: 500;
    text-decoration: none;
    border: none;
    background-color: #DCF42B;
    text-align: center;
    outline: none;
    font-family: Oswald;
}

.next-suggestion {
    padding-top: 1.3em;
    padding-bottom: 1.3em;
    margin-top: 3em;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    cursor: pointer;
}

.get-started, 
.get-started:visited {
    display: block;
    margin-top: 2em;
    padding: 1em 2em;
    border-radius: .5em;
    color: white; 
}

.next-suggestion:visited {
    color: black;
}

.next-suggestion:hover,
.get-started:hover { 
    background-color: #D8137D;
    color: black;
} 



/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    clip-path: none;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   Media Queries
   ========================================================================== */


@media (min-width: 450px) {
    .pair-of-moments {
        margin: 2%;
    }
    .intro {
    font-size: 5em;
    }
    .next-suggestion {
    font-size: 1.1em;
    }
    .description {
    font-size: 1.3em;
    }
    .next-suggestion:before {
    top: -7vw;
    height: 7vw;
    }

    .next-suggestion,
    .get-started {
    font-size: 1em;
    }

    .category {
    font-size: 2em;
    }

    @media only screen and (min-width: 850px) {
    .category {
    font-size: 2.5em;
    }


/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    p:first-letter,
    div:first-letter,
    blockquote:first-letter,
    li:first-letter,
    p:first-line,
    div:first-line,
    blockquote:first-line,
    li:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

